--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,7 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #ff00b4;
+//$primary: #ff00b4;
+$primary: rgba(173, 0, 119, 1);
 $secondary: #00f3ff;
 $accent: #9C27B0;
 
